# swept2.5

./: CMakeLists  CMakeLists.txt  daggerfront.c  daggerfront.h  overlappyramid.h
doc/: scheme-overlap-pyramid-00.txt  scheme-overlap-pyramid-01.txt  scheme-overlap-pyramid-redundant.txt  scheme-pyramid-tet.txt
src/: .ycm_extra_conf.py
src/chunks/: overlappyramid.h  overlappyramid_serial.c
src/fronts/: daggerfront.c  daggerfront.h
